bridge/base/backend-deployment.yaml
#! backend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: backend
    namespace: bachat-buddy
    labels:
        com.docker.compose.project: bachat_buddy
        com.docker.compose.service: backend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: bachat_buddy
            com.docker.compose.service: backend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: bachat_buddy
                com.docker.compose.service: backend
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: bachat-buddy-backend
                  image: bachat-buddy-backend
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: backend-5001
                      containerPort: 5001
