bridge/base/frontend-deployment.yaml
#! frontend-deployment.yaml
# Generated code, do not edit
apiVersion: apps/v1
kind: Deployment
metadata:
    name: frontend
    namespace: bachat-buddy
    labels:
        com.docker.compose.project: bachat_buddy
        com.docker.compose.service: frontend
spec:
    replicas: 1
    selector:
        matchLabels:
            com.docker.compose.project: bachat_buddy
            com.docker.compose.service: frontend
    strategy:
        type: Recreate
    template:
        metadata:
            labels:
                com.docker.compose.project: bachat_buddy
                com.docker.compose.service: frontend
                com.docker.compose.network.default: "true"
        spec:
            restartPolicy: unless-stopped
            containers:
                - name: bachat-buddy-frontend
                  image: bachat-buddy-frontend
                  imagePullPolicy: IfNotPresent
                  ports:
                    - name: frontend-80
                      containerPort: 80
