bridge/base/backend-expose.yaml
#! backend-expose.yaml
# Generated code, do not edit
apiVersion: v1
kind: Service
metadata:
    name: backend
    namespace: bachat-buddy
    labels:
        com.docker.compose.project: bachat_buddy
        com.docker.compose.service: backend
spec:
    selector:
        com.docker.compose.project: bachat_buddy
        com.docker.compose.service: backend
    ports:
        - name: backend-5001
          port: 5001
          targetPort: backend-5001
